welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:8: error: type mismatch;
 found   : Int
 required: String
				sol=i
                                    ^indexOfValue:18: error: type mismatch;
 found   : String
 required: Int
				return sol
                                       ^